@@ -1,3 +1,12 @@
+2009-11-18  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        GitTest.test_create_binary_patch fails if /tmp is symlink
+        https://bugs.webkit.org/show_bug.cgi?id=31536
+
+        * Scripts/modules/scm_unittest.py:
+
 2009-11-18  Yaar Schnitman  <yaar@chromium.org>
 
         Reviewed by Darin Adler.
